# aui-tk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-NOTICE.md  LICENSE-STRATEGY.md  README.md  pyproject.toml
src/: aui_tk.py
src/aui_tk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/auitk/: __init__,py  __init__.py  dtmf.py  flows.py  prompts.py  util.py
src/auitk/core/: config.py  input.py  loop.py  types.py
src/auitk/utils/: tts.py
src/auitk/widgets/: inputlabel.py  label.py  menu.py
